--- a/recipe-project/build.gradle
+++ b/recipe-project/build.gradle
@@ -19,6 +19,7 @@ repositories {
 }
 
 dependencies {
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
