--- a/recipe-project/build.gradle
+++ b/recipe-project/build.gradle
@@ -20,7 +20,8 @@ repositories {
 
 dependencies {
 	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.3'
-	//implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
