--- a/recipe-project/src/main/resources/application.properties
+++ b/recipe-project/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/console/
 spring.datasource.url=jdbc:h2:mem:recipeDB
 
+server.error.include-message=always
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
