--- a/recipe-project/src/main/resources/application.properties
+++ b/recipe-project/src/main/resources/application.properties
@@ -6,3 +6,25 @@ server.error.include-message=always
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
+
+#sprawdzic poni?sze 2
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.web.resources.add-mappings=false
+
+spring.cache.cache-names=buckets
+spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=3600s
+
+bucket4j.enabled=true
+bucket4j.filters[0].cache-name=buckets
+bucket4j.filters[0].url= /api/v1/przepis.*
+bucket4j.filters[0].http-response-body={ \"status\": 429, \"error\": \"Too Many Requests\", \"message\": \
+                                        \"You have exhausted API Request \" }
+bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=5
+bucket4j.filters[0].rate-limits[0].bandwidths[0].time=1
+bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=seconds
+
+logging.level.io.github.bucket4j.Bucket=INFO
+
+
+
+
