working with tests, and bugs

--- a/recipe-project/src/main/resources/application.properties
+++ b/recipe-project/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=3600s
 
 bucket4j.enabled=true
 bucket4j.filters[0].cache-name=buckets
-bucket4j.filters[0].url= /api/v1/przepis.*
+bucket4j.filters[0].url=/api/v1/meals.*
 bucket4j.filters[0].http-response-body={ \"status\": 429, \"error\": \"Too Many Requests\", \"message\": \
                                         \"You have exhausted API Request \" }
 bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=5
@@ -24,7 +24,3 @@ bucket4j.filters[0].rate-limits[0].bandwidths[0].time=1
 bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=seconds
 
 logging.level.io.github.bucket4j.Bucket=INFO
-
-
-
-
