--- a/recipe-project/src/main/resources/application.properties
+++ b/recipe-project/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/console/
 spring.datasource.url=jdbc:h2:mem:recipeDB
-
-server.error.include-message=always
+#spring.datasource.url=jdbc:h2:file:C:/data/demodb
+spring.datasource.username=admin
+#spring.datasource.password=qwerty#2022
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
+
+server.error.include-message=always
 
 #sprawdzic poni?sze 2
 spring.mvc.throw-exception-if-no-handler-found=true
