added users, tests and some refactor

--- a/recipe-project/src/main/resources/application.properties
+++ b/recipe-project/src/main/resources/application.properties
@@ -10,7 +10,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.error.include-message=always
 
-#sprawdzic poni?sze 2
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
@@ -19,7 +18,7 @@ spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=3600s
 
 bucket4j.enabled=true
 bucket4j.filters[0].cache-name=buckets
-bucket4j.filters[0].url=/api/v1/meals.*
+bucket4j.filters[0].url=/api/v1/.*
 bucket4j.filters[0].http-response-body={ \"status\": 429, \"error\": \"Too Many Requests\", \"message\": \
                                         \"You have exhausted API Request \" }
 bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=5
