--- a/recipe-project/src/test/resources/application.properties
+++ b/recipe-project/src/test/resources/application.properties
@@ -1,5 +1,5 @@
-#empty properties for Database too simulate disconnected Database
-
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.io.github.bucket4j.Bucket=INFO
 
 spring.cache.cache-names=buckets
 spring.cache.caffeine.spec=maximumSize=5000,expireAfterAccess=3600s
@@ -13,5 +13,3 @@ bucket4j.filters[0].rate-limits[0].bandwidths[0].capacity=8
 bucket4j.filters[0].rate-limits[0].bandwidths[0].time=10
 bucket4j.filters[0].rate-limits[0].bandwidths[0].unit=minutes
 #only for test is added 10 minutes unit and 8 capacity - because test works slowly and it`s almost impossible to catch 5 test in 1 sec.
-
-logging.level.io.github.bucket4j.Bucket=INFO
