--- a/recipe-project/src/main/resources/application.properties
+++ b/recipe-project/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/console/
 spring.datasource.url=jdbc:h2:mem:recipeDB
-#spring.datasource.url=jdbc:h2:file:C:/data/demodb
 spring.datasource.username=admin
-#spring.datasource.password=qwerty#2022
+spring.datasource.password=q!werty#2022
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
